@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RH-2013-12-31-0:  Enhancem.:  adjust to POSIX standard
+
 RH-2012-05-23-0:  CVS:        created GE 2011.11p1
                               - all new changes are for GE 2011.11 update 1
 
